stop media status component from wrapping

--- a/css/src/components/_ui.scss
+++ b/css/src/components/_ui.scss
@@ -623,7 +623,9 @@
 	}
 
 	&-panel-short {
-		width: 270px;
+		min-width: 270px;
+		width: auto;
+		display: inline-block;
 	}
 
 	&-submit,
